# TEST2

./: .gitignore  Assert_Compare_stub.ipynb  CMakeCache.txt  CMakeLists.txt  PGAS_notes.md  Scope_PGAS_notes.md  TEST2.ipynb  TEST2.py  TEST2_exc.py  TEST2_inh.py  TestingTEST2.ipynb  Untitled.ipynb  compare_model_outputs.ipynb  della_install.md  openJaneliaTest.py  pyenv_versions.txt  pyproject.toml  setup.py
Ground_truth/synth_default/: CAttached_jGCaMP8f_471993_1_mini.mat  CAttached_jGCaMP8f_471993_2_mini.mat  CAttached_jGCaMP8f_471993_3_mini.mat  CAttached_jGCaMP8f_471994_1_mini.mat  CAttached_jGCaMP8f_471994_2_mini.mat  CAttached_jGCaMP8f_471994_3_mini.mat  CAttached_jGCaMP8f_471994_4_mini.mat  CAttached_jGCaMP8f_471994_5_mini.mat  CAttached_jGCaMP8f_471994_6_mini.mat  CAttached_jGCaMP8f_471994_7_mini.mat  CAttached_jGCaMP8f_471994_8_mini.mat  CAttached_jGCaMP8f_478342_1_mini.mat  CAttached_jGCaMP8f_478342_3_mini.mat  CAttached_jGCaMP8f_478348_1_mini.mat  CAttached_jGCaMP8f_478349_1_mini.mat  CAttached_jGCaMP8f_478349_2_mini.mat  CAttached_jGCaMP8f_478349_3_mini.mat  CAttached_jGCaMP8f_478349_4_mini.mat  CAttached_jGCaMP8f_478349_5_mini.mat  CAttached_jGCaMP8f_478349_7_mini.mat  CAttached_jGCaMP8f_478407_1_mini.mat  CAttached_jGCaMP8f_478407_2_mini.mat  CAttached_jGCaMP8f_478407_3_mini.mat  CAttached_jGCaMP8f_478407_4_mini.mat  CAttached_jGCaMP8f_478407_5_mini.mat  CAttached_jGCaMP8f_478407_7_mini.mat  CAttached_jGCaMP8f_478410_1_mini.mat  CAttached_jGCaMP8f_478410_3_mini.mat  CAttached_jGCaMP8f_478410_4_mini.mat  CAttached_jGCaMP8f_478410_5_mini.mat  CAttached_jGCaMP8f_478410_6_mini.mat  CAttached_jGCaMP8f_478411_1_mini.mat  CAttached_jGCaMP8f_478411_2_mini.mat  CAttached_jGCaMP8f_478411_3_mini.mat  CAttached_jGCaMP8f_478411_4_mini.mat  (+2 more)
cascade2p/: cascade.py
dependencies/: CMakeLists.txt
gt_data/: jGCaMP8f_ANM471993_cell01.mat  jGCaMP8f_ANM471993_cell02.mat  jGCaMP8f_ANM471993_cell03.mat  jGCaMP8f_ANM471994_cell01.mat  jGCaMP8f_ANM471994_cell02.mat  jGCaMP8f_ANM471994_cell03.mat  jGCaMP8f_ANM471994_cell04.mat  jGCaMP8f_ANM471994_cell05.mat  jGCaMP8f_ANM471994_cell06.mat  jGCaMP8f_ANM471994_cell07.mat  jGCaMP8f_ANM471994_cell08.mat  jGCaMP8f_ANM478342_cell01.mat  jGCaMP8f_ANM478342_cell03.mat  jGCaMP8f_ANM478342_cell04.mat  jGCaMP8f_ANM478348_cell01.mat  jGCaMP8f_ANM478349_cell01.mat  jGCaMP8f_ANM478349_cell02.mat  jGCaMP8f_ANM478349_cell03.mat  jGCaMP8f_ANM478349_cell04.mat  jGCaMP8f_ANM478349_cell05.mat  jGCaMP8f_ANM478349_cell06.mat  jGCaMP8f_ANM478349_cell07.mat  jGCaMP8f_ANM478407_cell01.mat  jGCaMP8f_ANM478407_cell02.mat  jGCaMP8f_ANM478407_cell03.mat  jGCaMP8f_ANM478407_cell04.mat  jGCaMP8f_ANM478407_cell05.mat  jGCaMP8f_ANM478407_cell06.mat  jGCaMP8f_ANM478407_cell07.mat  jGCaMP8f_ANM478410_cell01.mat  jGCaMP8f_ANM478410_cell03.mat  jGCaMP8f_ANM478410_cell04.mat  jGCaMP8f_ANM478410_cell05.mat  jGCaMP8f_ANM478410_cell06.mat  jGCaMP8f_ANM478411_cell01.mat  jGCaMP8f_ANM478411_cell02.mat  jGCaMP8f_ANM478411_cell03.mat  jGCaMP8f_ANM478411_cell04.mat  jGCaMP8f_ANM478411_cell05.mat  jGCaMP8f_ANM478411_cell06.mat
pgas/: Makefile
sample_data/: constants_GCaMP3_1_soma.json  constants_GCaMP_inhib.json
scripts/: slurm_run_cpu_profile.sh  slurm_run_cpu_profile.slurm
syn_gen/: synth_gen.py
tests/: test_pgas.py
(+81 files in other folders)
